# pystella

./: .gitignore  .readthedocs.yml  .test-conda-env-py3.yml  LICENSE  README.rst  azure-pipelines.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/: changes.rst  citing.rst  conf.py  environment.yml  faq.rst  index.rst  installation.rst  license.rst  ref_codegen.rst  ref_finitediff.rst  ref_fourier.rst  ref_multigrid.rst  ref_other.rst  ref_stepping.rst  requirements.txt
examples/: codegen-tutorial.ipynb  scalar_preheating.py  wave_equation.py
pystella/: __init__.py  decomp.py  derivs.py  elementwise.py  expansion.py  histogram.py  output.py  reduction.py  sectors.py  stencil.py  step.py
pystella/field/: __init__.py  diff.py  sympy.py
pystella/fourier/: __init__.py  derivs.py  dft.py  poisson.py  projectors.py  rayleigh.py  spectra.py
pystella/multigrid/: __init__.py  relax.py  transfer.py
test/: common.py  conftest.py  test_decomp.py  test_derivs.py  test_dft.py  test_elementwise.py  test_energy.py  test_examples.py  test_expansion.py  test_field.py  test_histogram.py  test_multigrid.py  test_poisson.py  test_projectors.py  test_rayleigh.py  test_reduction.py  test_relax.py  test_spectra.py  test_stencil.py  test_step.py  test_transfer.py
