[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --durations=30 --tb=native"

[tool.pylint.main]
recursive = true
jobs = 4
ignore = [".git", "__pycache__", "build", "dist"]

[tool.pylint."messages control"]
disable = "all"
enable = "E,F"

[tool.pylint.REPORTS]
output-format = "colorized"

[project]
name = "pystella"
version = "2021.1"
license = {file = "LICENSE"}
description = "A code generator for grid-based PDE solving on CPUs and GPUs"
readme = "README.rst"
authors = [
    {name = "Zachary J Weiner"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "numpy>=1.18.5",
    "pyopencl>=2020.2",
    "loopy>=2022.1",
]

[project.urls]
homepage = "https://github.com/zachjweiner/pystella"
documentation = "https://pystella.readthedocs.io/en/latest/"
source = "https://github.com/zachjweiner/pystella"
